--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -60,15 +60,16 @@ jobs:
         # need to run Wallet e2e when its upstream(TS SDK and Rust) or itself is changed
         if: ${{ needs.diff.outputs.isWallet == 'true' || needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
         run: pnpm wallet build
-      - name: Run Wallet e2e tests
-        if: ${{ needs.diff.outputs.isWallet == 'true' || needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
-        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm wallet playwright test
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report-wallet
-          path: apps/wallet/playwright-report/
-          retention-days: 30
+      # Disable wallet devenet test, 
+      # - name: Run Wallet e2e tests
+      #   if: ${{ needs.diff.outputs.isWallet == 'true' || needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
+      #   run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm wallet playwright test
+      # - uses: actions/upload-artifact@v3
+      #   if: always()
+      #   with:
+      #     name: playwright-report-wallet
+      #     path: apps/wallet/playwright-report/
+      #     retention-days: 30
 # Disable devnet tests for now
 # Run e2e test against localnet built on the devnet branch for backward compatibility check
 # local_devnet_branch:
