--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -79,6 +79,7 @@ rand = "0.8.5"
 move-binary-format.workspace = true
 move-package.workspace = true
 sui-core = { path = "../sui-core" }
+sui-json-rpc = { path = "../sui-json-rpc" }
 sui-node = { path = "../sui-node" }
 sui-macros = { path = "../sui-macros" }
 sui-simulator = { path = "../sui-simulator" }
