* lot of refactoring in indexer to make it sync checkpoint data as a bloc instead of syncing endpoints independently to allow more organised indexing. * added initial wireframe of partition manager * simplified object models * added InMemoryIndexerStore for unit test

--- a/crates/sui-indexer/diesel.toml
+++ b/crates/sui-indexer/diesel.toml
@@ -4,6 +4,8 @@
 [print_schema]
 file = "src/schema.rs"
 patch_file = "src/schema.patch"
+# exclude partitions
+filter = { only_tables = ['.*[^_partition_\d]$']}
 
 [migrations_directory]
 dir = "migrations"
