--- a/crates/sui-move/Cargo.toml
+++ b/crates/sui-move/Cargo.toml
@@ -27,7 +27,10 @@ colored = "2.0.0"
 
 telemetry-subscribers.workspace = true
 
+move-binary-format.workspace = true
 move-core-types.workspace = true
+move-disassembler.workspace = true
+move-ir-types.workspace = true
 move-prover.workspace = true
 move-prover-boogie-backend.workspace = true
 move-stackless-bytecode.workspace = true
