--- a/crates/mysten-network/Cargo.toml
+++ b/crates/mysten-network/Cargo.toml
@@ -8,7 +8,7 @@ description = "Mysten's network tooling"
 publish = false
 
 [dependencies]
-bincode = "1.3.3"
+bcs = "0.1.4"
 bytes = "1.3.0"
 eyre = "0.6.8"
 futures = "0.3.21"
