--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -10,7 +10,6 @@ edition = "2021"
 anemo.workspace = true
 anemo-tower.workspace = true
 anyhow = { version = "1.0.64", features = ["backtrace"] }
-bincode = "1.3.3"
 bcs = "0.1.4"
 byteorder = "1.4.3"
 itertools = "0.10.5"
@@ -58,7 +57,7 @@ workspace-hack = { version = "0.1", path = "../workspace-hack" }
 derive_more = "0.99.17"
 
 [dev-dependencies]
-bincode = "1.3.3"
+bcs = "0.1.4"
 test-utils = { path = "../test-utils" }
 criterion = { version = "0.4.0", features = ["async", "async_tokio"] }
 proptest = "1.0.0"
