WIP: failed attempt to limit exposure to move-stdlib/testing

--- a/crates/sui-move/Cargo.toml
+++ b/crates/sui-move/Cargo.toml
@@ -74,6 +74,6 @@ build = []
 coverage = []
 disassemble = []
 prove = []
-unit_test = ["build", "dep:once_cell", "dep:sui-core"]
+unit_test = ["build", "dep:once_cell", "dep:sui-core", "sui-framework/testing"]
 calibrate = []
 all = ["build", "coverage", "disassemble", "prove", "unit_test", "calibrate"]
