--- a/crates/sui-framework/Cargo.toml
+++ b/crates/sui-framework/Cargo.toml
@@ -35,7 +35,7 @@ move-cli.workspace = true
 move-compiler.workspace = true
 move-core-types.workspace = true
 move-package.workspace = true
-move-stdlib.workspace = true
+move-stdlib = { workspace = true, default-features = false }
 move-vm-runtime.workspace = true
 move-vm-test-utils.workspace = true
 move-vm-types.workspace = true
@@ -54,3 +54,7 @@ move-package.workspace = true
 
 [package.metadata.cargo-udeps.ignore]
 normal = ["move-cli", "move-unit-test"]
+
+[features]
+default = []
+testing = ["move-stdlib/testing"]
