--- a/.github/workflows/simulator-nightly.yml
+++ b/.github/workflows/simulator-nightly.yml
@@ -54,9 +54,9 @@ jobs:
 
   notify:
     name: Notify
-    needs: [cluster-test]
+    needs: [simtest]
     runs-on: [self-hosted, self-hosted-arc]
-    if: always() # only notify on failure
+    if: always() # always notify
 
     steps:
     - uses: technote-space/workflow-conclusion-action@v3
