--- a/.config/hakari.toml
+++ b/.config/hakari.toml
@@ -26,6 +26,16 @@ platforms = [
 
 output-single-feature = true
 
+[traversal-excludes]
+workspace-members = [ "sui-move" ]
+third-party = [
+    ## Exclude the 'move-unit-test' crate in order to ensure that the 'testing'
+    # feature isn't enabled in the workspace-hack
+    { name = "move-unit-test", git = "https://github.com/move-language/move", rev = "299784312ca360f970c0e75f7a08116d7731ad1d" },
+    { name = "move-cli", git = "https://github.com/move-language/move", rev = "299784312ca360f970c0e75f7a08116d7731ad1d" },
+    { name = "move-transactional-test-runner", git = "https://github.com/move-language/move", rev = "299784312ca360f970c0e75f7a08116d7731ad1d" },
+]
+
 [final-excludes]
 workspace-members = [
     "x",
