--- a/crates/sui-move/Cargo.toml
+++ b/crates/sui-move/Cargo.toml
@@ -40,9 +40,9 @@ move-stackless-bytecode.workspace = true
 move-unit-test.workspace = true
 move-vm-runtime.workspace = true
 move-vm-test-utils.workspace = true
+move-stdlib = { workspace = true, features = ["testing"] }
 move-cli.workspace = true
 move-package.workspace = true
-workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 jemalloc-ctl = "^0.5"
@@ -74,6 +74,6 @@ build = []
 coverage = []
 disassemble = []
 prove = []
-unit_test = ["build", "dep:once_cell", "dep:sui-core", "sui-framework/testing"]
+unit_test = ["build", "dep:once_cell", "dep:sui-core"]
 calibrate = []
 all = ["build", "coverage", "disassemble", "prove", "unit_test", "calibrate"]
