--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -76,8 +76,10 @@ jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-core"] }
 
 test-utils = { path = "../test-utils" }
 rand = "0.8.5"
+move-binary-format.workspace = true
 move-package.workspace = true
 sui-core = { path = "../sui-core" }
+sui-json-rpc = { path = "../sui-json-rpc" }
 sui-node = { path = "../sui-node" }
 sui-macros = { path = "../sui-macros" }
 sui-simulator = { path = "../sui-simulator" }
