--- a/sdk/ledgerjs-hw-app-sui/package.json
+++ b/sdk/ledgerjs-hw-app-sui/package.json
@@ -56,7 +56,7 @@
         "prettier:fix:watch": "onchange '**' -i -f add -f change -j 5 -- prettier -w --ignore-unknown {{file}}",
         "size": "size-limit",
         "test": "pnpm test:typecheck && pnpm test:unit",
-        "test:typecheck": "tsc -p ./test",
+        "test:typecheck": "tsc -p ./tests",
         "test:unit": "vitest run",
         "test:watch": "vitest"
     },
