--- a/sdk/ledgerjs-hw-app-sui/package.json
+++ b/sdk/ledgerjs-hw-app-sui/package.json
@@ -31,10 +31,6 @@
     "main": "dist/Sui.js",
     "module": "dist/Sui.mjs",
     "types": "dist/Sui.d.ts",
-    "dependencies": {
-        "@ledgerhq/hw-transport": "^6.3.0",
-        "fast-sha256": "^1.3.0"
-    },
     "size-limit": [
         {
             "path": "dist/Sui.js",
@@ -60,7 +56,12 @@
         "test:unit": "vitest run",
         "test:watch": "vitest"
     },
+    "dependencies": {
+      "@ledgerhq/hw-transport": "^6.3.0",
+      "fast-sha256": "^1.3.0"
+    },
     "devDependencies": {
+        "@ledgerhq/hw-transport-mocker": "^6.3.0",
         "@types/node": "^16.10.3",
         "@size-limit/preset-small-lib": "^8.1.0",
         "eslint": "^8.31.0",
