--- a/crates/mysten-network/Cargo.toml
+++ b/crates/mysten-network/Cargo.toml
@@ -8,13 +8,15 @@ description = "Mysten's network tooling"
 publish = false
 
 [dependencies]
-bincode = "1.3.3"
+anemo.workspace = true
+bcs = "0.1.4"
 bytes = "1.3.0"
 eyre = "0.6.8"
 futures = "0.3.21"
 http = "0.2.8"
 multiaddr = "0.17.0"
 serde = { version = "1.0.140", features = ["derive"] }
+snap = "1.1.0"
 tokio = { workspace = true, features = ["sync", "rt", "macros"] }
 tokio-stream = { version = "0.1.11", features = ["net"] }
 tonic = { version = "0.8.2", features = ["transport"] }
