--- a/narwhal/executor/Cargo.toml
+++ b/narwhal/executor/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 
 [dependencies]
 async-trait = "0.1.61"
+bcs = "0.1.4"
 bincode = "1.3.3"
 bytes = "1.3.0"
 config = { path = "../config", package = "narwhal-config" }
