--- a/narwhal/primary/Cargo.toml
+++ b/narwhal/primary/Cargo.toml
@@ -12,6 +12,7 @@ arc-swap = "1.5.1"
 async-trait = "0.1.61"
 backoff = { version = "0.4", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
 base64 = "0.13.0"
+bcs = "0.1.4"
 bincode = "1.3.3"
 bytes = "1.3.0"
 config = { path = "../config", package = "narwhal-config" }
