--- a/narwhal/types/Cargo.toml
+++ b/narwhal/types/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 [dependencies]
 async-trait = "0.1.61"
 base64 = "0.13.0"
+bcs = "0.1.4"
 bincode = "1.3.3"
 bytes = "1.3.0"
 dashmap = "5.4.0"
@@ -40,6 +41,7 @@ workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }
 once_cell = "1.16.0"
 
 store = { path = "../../crates/typed-store", package = "typed-store" }
+mysten-network.workspace = true
 mysten-util-mem.workspace = true
 
 [dev-dependencies]
