--- a/crates/sui-orchestrator/Cargo.toml
+++ b/crates/sui-orchestrator/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "sui-orchestrator"
-version = "0.1.0"
+version = "0.0.0"
+authors = ["Mysten Labs <build@mystenlabs.com>"]
+license = "Apache-2.0"
+publish = false
 edition = "2021"
 
 [dependencies]
 tokio = { workspace = true, features = ["full"] }
-move-core-types.workspace = true
-
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.88"
 async-trait = "0.1.61"
@@ -17,8 +18,6 @@ prettytable-rs = "0.10"
 thiserror = "1.0.38"
 serde_yaml = "0.9.17"
 crossterm = "0.26.0"
-regex = "1.7.1"
-prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs.git", rev = "75334db" }
 aws-config = "0.54.1"
 aws-sdk-ec2 = "0.24.0"
 multiaddr = "0.17.0"
@@ -26,12 +25,11 @@ rand = "0.8.5"
 futures = "0.3.23"
 clap = { version = "3.1.17", features = ["derive"] }
 
-sui-core = { path = "../sui-core" }
+prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }
+
+move-core-types.workspace = true
 sui-config = { path = "../sui-config" }
-sui-network = { path = "../sui-network" }
 sui-types = { path = "../sui-types" }
-sui-sdk = { path = "../sui-sdk" }
 sui-keys = { path = "../sui-keys" }
-sui-node = { path = "../sui-node" }
 
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
