[move] Disable debug printing on nodes (#8795)
## Description 

Disable outputting `debug::print` to stderr on full nodes and
validators, to prevent user code from spamming our logs, while still
enabling output for calls via CLI (e.g. to `sui move test`). Removes a
dependency from `sui-framework` to `move-unit-test` to make this work,
by:

- Moving `cost_calib` module to `sui-move`.
- Moving integration of sui-framework Move unit tests into Rust tests
into its own crate.

## Test Plan 

With the following Move package:

```toml
# Move.toml
[package]
name = "MovePkg"
version = "0.0.0"

[dependencies]
MoveStdlib = { local = "..." }

[addresses]
example = "0x0"
```

```rust
module example::example {
    use std::debug;

    struct DebugPrintTest has drop {}

    public entry fun test_debug_print() {
        debug::print(&DebugPrintTest {});
    }

    #[test]
    fun test_during_testing() {
        test_debug_print();
    }
}
```

Build `sui` CLI and `sui-node` **separately** so that Cargo does not
unify features, and start-up the validators embedded in the CLI, and a
separate fullnode (in separate terminal sessions):

```shell
sui$ cargo build -p sui-node && cargo build -p sui
sui$ rm -rf ~/.sui && ~/sui/target/debug/sui genesis -f && ~/sui/target/debug/sui start --no-full-node
sui$ ~/sui/target/debug/sui-node --config-path ~/.sui/sui_config/fullnode.yaml
```

Running the tests will print the debug output, and publishing and
running transactions will produce debug output in the embedded
validator, but not the dedicated fullnode:

```shell
move-pkg$ ~/sui/target/debug/sui move test # prints debug output
move-pkg$ ~/sui/target/debug/sui client publish --gas-budget 10000
move-pkg$ while true; do; 
  ~/sui/target/debug/sui client call \
    --package <package> \
    --module "example" \
    --function "test_debug_print" \
    --gas-budget 1000; 
done
```

---------

Co-authored-by: Brandon Williams 

--- a/.config/hakari.toml
+++ b/.config/hakari.toml
@@ -4,7 +4,7 @@
 hakari-package = "workspace-hack"
 
 # Format for `workspace-hack = ...` lines in other Cargo.tomls.
-dep-format-version = "3"
+dep-format-version = "4"
 
 # Setting workspace.resolver = "2" in the root Cargo.toml is HIGHLY recommended.
 # Hakari works much better with the new feature resolver.
@@ -25,6 +25,16 @@ platforms = [
 # exact-versions = true
 
 output-single-feature = true
+
+[traversal-excludes]
+workspace-members = [ "sui-move" ]
+third-party = [
+    ## Exclude the 'move-unit-test' crate in order to ensure that the 'testing'
+    # feature isn't enabled in the workspace-hack
+    { name = "move-unit-test", git = "https://github.com/move-language/move", rev = "299784312ca360f970c0e75f7a08116d7731ad1d" },
+    { name = "move-cli", git = "https://github.com/move-language/move", rev = "299784312ca360f970c0e75f7a08116d7731ad1d" },
+    { name = "move-transactional-test-runner", git = "https://github.com/move-language/move", rev = "299784312ca360f970c0e75f7a08116d7731ad1d" },
+]
 
 [final-excludes]
 workspace-members = [
