[apps][part 2] use common utilities from @mysten/core inside the wallet and explorer (#8632)
## Description 

This is a follow-up to https://github.com/MystenLabs/sui/pull/8623, so
now we're actually using `useRpcClient`, `SentryRpcClient`, and
`useFormatCoin` from `@mysten/core` in our frontend applications. If
you're building features right now, you'll need to rebase and make sure
you're using `useRpcClient` from `@mysten/core` when making RPC calls!

(Also apologies in advance for this size of this changeset, it's mostly
updating imports)

## Test Plan 

- Manual testing (switching networks works in both the wallet and
explorer)
- CI

---
If your changes are not user-facing and not a breaking change, you can
skip the following section. Otherwise, please indicate what changed, and
then add to the Release Notes section as highlighted during the release
process.

### Type of Change (Check all that apply)

- [ ] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

### Release notes

N/A

--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -26,7 +26,8 @@
         "@sentry/tracing": "^7.38.0",
         "@tanstack/react-query": "^4.20.9",
         "bignumber.js": "^9.1.1",
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@headlessui/tailwindcss": "^0.1.2",
