creating gas station client and adding to txn builder sdk
adding api call to indexer

moving functionality to server layer

testing changes

--- a/crates/sui-indexer/Cargo.toml
+++ b/crates/sui-indexer/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.83"
 thiserror = "1.0.34"
 tracing = "0.1.36"
 tokio = { workspace = true, features = ["full"] }
+move-core-types.workspace = true
 
 narwhal-network = { path = "../../narwhal/network" }
 sui-core = { path = "../sui-core" }
