[sui-framework] Support deactivated staking pools
This adds logic for the transition from an active validator to an
inactive staking pool and adds the logic for withdrawing from an
inactive staking pool.

As opposed to an active staking pool withdrawals which occur at epoch
boundaries, withdrawals from an inactive pool occur immediately.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ storage/
 Move.lock
 !crates/sui-framework/Move.lock
 !crates/sui-framework/deps/move-stdlib/Move.lock
+.trace
+.coverage_map.mvcov
 
 # Thumbnails
 ._*
