--- a/narwhal/consensus/Cargo.toml
+++ b/narwhal/consensus/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 
 [dependencies]
 arc-swap = { version = "1.5.1", features = ["serde"] }
+bcs = "0.1.4"
 bincode = "1.3.3"
 bytes = "1.3.0"
 match_opt = "0.1.2"
