--- a/crates/sui-adapter/Cargo.toml
+++ b/crates/sui-adapter/Cargo.toml
@@ -17,6 +17,7 @@ tracing = "0.1.36"
 serde = { version = "1.0.140", features = ["derive"] }
 
 move-binary-format.workspace = true
+move-bytecode-utils.workspace = true
 move-bytecode-verifier.workspace = true
 move-core-types.workspace = true
 move-vm-runtime.workspace = true
