--- a/crates/sui-orchestrator/assets/settings.json
+++ b/crates/sui-orchestrator/assets/settings.json
@@ -7,7 +7,7 @@
     "specs": "g5.8xlarge",
     "repository": {
         "url": "http://github.com/mystenlabs/sui",
-        "branch": "orchestrator"
+        "commit": "orchestrator"
     },
     "results_directory": "./results",
     "logs_directory": "./logs"
