Use store procedure and table triggers to populate object_history, owner, owner_history tables from objects table.

--- a/crates/sui-indexer/diesel.toml
+++ b/crates/sui-indexer/diesel.toml
@@ -5,7 +5,7 @@
 file = "src/schema.rs"
 patch_file = "src/schema.patch"
 # exclude partitions
-filter = { only_tables = ['.*[^_partition_\d]$']}
+filter = { except_tables = ['.*(_partition_)\d+']}
 
 [migrations_directory]
 dir = "migrations"
