--- a/crates/sui-json-rpc/Cargo.toml
+++ b/crates/sui-json-rpc/Cargo.toml
@@ -44,6 +44,7 @@ sui-transaction-builder = { path = "../sui-transaction-builder" }
 sui-protocol-config = { path = "../sui-protocol-config" }
 mysten-metrics = { path = "../mysten-metrics" }
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
+shared-crypto = { path = "../shared-crypto" }
 
 [dev-dependencies]
 sui-config = { path = "../sui-config" }
